- Changed : Remove float in singlepic code and added class ngg-left , ngg-right (THX to Nathan Sylvain)
- Changed : Edit style setting (added new class .desc , THX to Sebastian) 
- Changed : Check for galleryfolder instead name (THX to Luke Poland)
- Changed : Delete images per default
- Changed : Change CSS (ngg-album-compact) , remove width & height setting from code
- Bugfix : Change Album CSS (THX to Thomas-DK)
- Bugfix : Watermark for GIF not correct supported
- Bugfix : Missing wp_nonce at setup page
- Bugfix : Add DIV in Slideshow link (for Safari)
- Added : Set WP-CHARSET / COLLATE during installation
- Added : Updated to Pclzip.lib.php v2.6
- Added : CSS ID field for gallery & images
- WPMU : New site admin page (wpmu.php)
- WPMU : Integrated quota check
- WPMU : No update check
- WPMU : Remove edit style (THX to Kristin)
- WPMU : Remove uninstall button
- WPMU : Remove server settings
- WPMU : Gallery path set to blog.dir
- Added : Support for WPMU

V0.74 - 01.12.2007
- NEW : Added meta reader class, first step to integrated meta data import

V0.73 - 20.10.2007
- Added : Support for Shutter Reloaded
- Update to jQuery Tabs 2.7.4
- Changed : Remove $_SERVER['REQUEST_URI'] for IIS compatibility
- Bugfix : Option Sildeshow didn't jump to overview

V0.72 - 13.09.2007
- Added : Missing overflow:hidden in ngg-album.css
- Added : New experimental stylesheet hovereffect.css
- Changed : Better check for memory limit in zip-files
- Bugfix : Missing stripslashes for alttext (THX to Lawrence)
- Bugfix : Navigation didn't highlight page 1 (THX to Brot)
- Bugfix : Albums automatic minimize if more than 4 galleries
- Bugfix : Missing check_admin_referer in style (THX again to Christopher)

V0.71 - 07.09.2007
- Added  : Add defer="defer" to Slideshow to avoid IE crash (THX to Simbo)
- Bugfix : Bugfix for slideshow to show all pictures
- Bugfix : Wrong check_admin_referer in albums (THX to Christopher)